# SCYTHE

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ctx_engine/: __init__.py  call_graph.py  cli.py  directories.py  discovery.py  hashing.py  imports_graph.py  reindex.py
src/ctx_engine/commands/: __init__.py  generate_mcp_config.py  init.py  install_hooks.py  log_commit.py  serve.py  status.py  summarize.py  sync.py  update.py  validate.py  watch.py
src/ctx_engine/daemon/: daemon.py  local_llm.py  watcher.py
src/ctx_engine/db/: __init__.py  connection.py  schema.py
src/ctx_engine/intelligence/: __init__.py  confidence.py  llm_client.py  taint.py
src/ctx_engine/languages/: __init__.py  base.py  go_adapter.py  javascript_adapter.py  python_adapter.py  registry.py  (+2 more)
tests/: test_call_graph.py  test_confidence_decay.py  test_file_event_handler.py  test_generate_mcp_config.py  test_go_adapter.py  test_hashing.py  test_imports_graph.py  test_init_integration.py  test_init_speed.py  test_install_hooks.py  test_javascript_adapter.py  test_llm_client.py  test_log_commit.py  test_mcp_assembly.py  test_mcp_centrality.py  test_mcp_folding.py  test_mcp_read_tools.py  test_mcp_write_tools.py  test_mtime_cache.py  test_ollama_client.py  test_parallel_init.py  test_python_adapter.py  test_reindex_hash_aware.py  test_rust_adapter.py  test_status.py  test_status_week3.py  test_summarize.py  test_summarize_taint_selection.py  test_sync.py  test_taint_propagation.py  test_typescript_adapter.py  test_update_command.py  test_validate.py  test_watch_status.py
(+7 files in other folders)
